# AI_test

./: README.md  pyproject.toml  report.md
src/tour/: crew.py  main.py
src/tour/config/: agents.yaml  tasks.yaml
